Fixed layout overlap and links styles

--- a/src/components/Tabs.module.css
+++ b/src/components/Tabs.module.css
@@ -8,7 +8,7 @@
 }
 
 .tabs > li {
-  width: 25%;
+  width: 50%;
   font-size: 20px;
   text-align: center;
   padding: 0 0 10px 0;
@@ -20,4 +20,8 @@
   border-bottom: 6px solid red;
   position: relative;
   top: 6px;
+}
+
+a:-webkit-any-link {
+    text-decoration: none;
 }
